--- a/index.html
+++ b/index.html
@@ -3,163 +3,47 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Net-Zero: Video Transcripts</title>
-
+  <title>Welcome to Net-Zero Resources</title>
   <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      padding: 100px;
+      background-color: #f5f5f5;
+    }
+
     h1 {
-      color: #ffffff;
-      font-size: 43px;
-      margin-bottom: 30px;
-      margin-top: 18px;
-      text-align: left;
-      margin-left: 200px;
-      font-family: sans-serif;
-      font-weight: 550;
-    }
-
-    table {
-      border-collapse: collapse;
-    }
-
-    th {
-      color: white;
-      font-weight: bold;
-      font-size: 20px;
-      padding: 10px;
-    }
-
-    td {
-      color: black;
-      padding: 10px;
-    }
-
-    h2 {
-      color: white;
-      font-size: 12px;
-      margin-top: 0px;
-      text-align: left;
-      margin-left: 200px;
-      font-style: italic;
-      font-family: sans-serif;
-      font-weight: 85;
-      letter-spacing: 1px;
-      word-spacing: 3px;
-    }
-
-    main {
-      color: black;
-      font-family: sans-serif;
-      margin-top: 60px;
-      margin-left: auto;
-      margin-right: auto;
-      font-size: 18px;
-      font-weight: normal;
-      line-height: 1.75;
-      max-width: 900px;
-      padding: 0 20px;
+      font-size: 36px;
+      color: #333;
     }
 
     p {
-      color: black;
-      font-family: sans-serif;
       font-size: 18px;
-      font-weight: normal;
-      line-height: 1.6;
-      margin-bottom: 20px;
+      margin-top: 20px;
     }
 
-    h3 {
-      color: black;
-      font-size: 26px;
-      font-family: sans-serif;
-      margin-top: 60px;
-      margin-bottom: 10px;
-      font-weight: bold;
-    }
-
-    .centerCell {
-      text-align: center;
-    }
-
-    .centered {
-      text-align: center;
-    }
-
-    .header {
-      background: #94c11e;
-      padding: 60px;
-      text-align: center;
+    a.button {
+      display: inline-block;
+      margin-top: 30px;
+      padding: 12px 24px;
+      font-size: 16px;
       color: white;
-      font-size: 30px;
-      height: auto;
-      min-height: 125px;
+      background-color: #94c11e;
+      text-decoration: none;
+      border-radius: 6px;
+      transition: background-color 0.3s;
     }
 
-    hr {
-      width: 170px;
-      margin-left: 200px;
-      color: white;
-      border: 3px solid white;
-    }
-
-    ol,
-    ul {
-      margin-left: 50px;
-      margin-right: 50px;
-    }
-
-    .accessibility {
-      text-align: left;
-    }
-
-    a:link {
-      color: #94c11e;
-    }
-
-    a:visited {
-      color: #94c11e;
+    a.button:hover {
+      background-color: #7ca01a;
     }
   </style>
 </head>
 
 <body>
-
-  <div class="header">
-    <h2>Video Transcripts</h2>
-    <h1>Net-Zero</h1>
-    <hr />
-  </div>
-
-  <main>
-    <div class="centered">
-
-      <section class="accessibility">
-        <h3 id="Vid01">Video 1 title</h3>
-        <p><strong>Speaker: XYZ</strong></p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua...</p>
-      </section>
-
-      <section class="accessibility">
-        <h3 id="Vid02">Video 2 title</h3>
-        <p><strong>Speaker: XYZ</strong></p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua...</p>
-      </section>
-
-      <section class="accessibility">
-        <h3 id="Vid03">Video 3 title</h3>
-        <p><strong>Speaker: XYZ</strong></p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua...</p>
-      </section>
-
-      <section class="accessibility">
-        <h3 id="Vid04">Video 4 title</h3>
-        <p><strong>Speaker: XYZ</strong></p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua...</p>
-      </section>
-
-    </div>
-  </main>
-
+  <h1>Welcome to the Net-Zero Learning Hub</h1>
+  <p>Click below to access the video transcripts and learning materials.</p>
+  <a class="button" href="NZ-video-transcripts.html">Go to Net-Zero Transcripts</a>
 </body>
 
 </html>
