--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <a class="button" href="NZ-video-transcripts.html">Net-Zero Transcripts</a>
     <a class="button" href="RES-video-transcripts.html">Resources Transcripts</a>
     <a class="button" href="HLT-video-transcripts.html">Health Transcripts</a>
-    <a class="button" href="RSC-video-transcripts.html">Research Transcripts</a>
+    <a class="button" href="RSC-video-transcripts.html">Resilience Transcripts</a>
     <a class="button" href="EQT-video-transcripts.html">Equity Transcripts</a>
     <a class="button" href="SKL-video-transcripts.html">Skills Transcripts</a>
   </div>
